--- a/.htaccess
+++ b/.htaccess
@@ -1,8 +1,7 @@
 DirectoryIndex index.html
 
-RewriteEngine on 
-RewriteCond %{REQUEST_FILENAME} !-d
-RewriteCond %{REQUEST_FILENAME}\.html -f
-RewriteRule ^(.*)$ $1.html [NC,L]
-RewriteCond %{THE_REQUEST} \.html
-RewriteRule ^(.*)\.html$ /$1 [R=301,L]
+RewriteEngine On
+RewriteBase /
+
+RewriteCond %{REQUEST_URI} \.html$
+RewriteRule ^(.*)\.html$ $1 [R=301,L]
